Simplify stream call chains